# kandinsky

./: .bazelrc  .clang-format  .clangd  .cursorignore  .gitignore  .vimrc  BUILD.bazel  MODULE.bazel  README.md  TODO.md  build_debug.bat  compile_flags.txt  hot_reload.bat  main.cpp  run_debug.bat  run_learn_opengl.bat  run_std.bat  run_tower_defense.bat  validate_shaders.bat
.claude/: settings.local.json
apps/assimp_test/: BUILD.bazel  main.cpp
apps/cpp_test/: BUILD.bazel  main.cpp
apps/display_query/: BUILD.bazel  main.cpp
apps/experimental/serde/: BUILD.bazel  main.cpp  serde.cpp  serde.h
apps/learn_opengl/: BUILD.bazel  learn_opengl.cpp  learn_opengl.h  light.cpp  light.h
apps/libclang_test/: BUILD.bazel  libclang_test.cpp  parsing.cpp  parsing.h  simple.cpp
apps/std/: BUILD.bazel  std.cpp
apps/tower_defense/: BUILD.bazel  app.cpp  shared_lib.cpp  tower_defense.cpp  tower_defense.h
apps/tower_defense/levels/: level.yaml  level2.yaml
assets/models/backpack/: backpack.Model.yml
assets/models/mini_dungeon/: wall-opening.Model.yml
assets/shaders/: billboard.glsl  font.glsl  grid.frag  grid.glsl  grid.vert  light.frag  light.glsl  light.vert  line_batcher.frag  line_batcher.glsl  line_batcher.vert  shader.frag  shader.glsl  shader.vert
experimental/: entity_manager.obj.params  scene.obj.params
experimental/concurrency/: BUILD.bazel  concurrency.cpp
experimental/font_loader/: BUILD.bazel  font_loader.cpp
extras/: compile_flags.txt  render_doc_stb.cap
extras/includes/catch2/: README.md
kandinsky/: BUILD.bazel  app_harness.cpp  asset.cpp  asset.h  asset_registry.cpp  asset_registry.h  camera.cpp  camera.h  cc_rules.bzl  color.cpp  color.h  container.h  container_test.cpp  debug.cpp  debug.h  defines.cpp  defines.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  entity_manager_test.cpp  entity_test.cpp  game.cpp  game.h  glew.cpp  glew.h  imgui.cpp  imgui.h  imgui_widgets.cpp  imgui_widgets.h  input.h  intrin.h  main.cpp  math.cpp  math.h  memory.cpp  memory.h  memory_test.cpp  opengl.cpp  (+19 more)
kandinsky/apps/: BUILD.bazel  learn_opengl.cpp  learn_opengl.h  light.cpp  light.h  test.cpp
kandinsky/core/: BUILD.bazel  algorithm.h  color.cpp  color.h  container.h  container_test.cpp  defines.cpp  defines.h  file.cpp  file.h  file_test.cpp  function.h  function_test.cpp  intrin.h  math.cpp  math.h  memory.cpp  memory.h  memory_test.cpp  serde.cpp  serde.h  serde_test.cpp  string.cpp  string.h  string_test.cpp  time.cpp
kandinsky/ecs/: BUILD.bazel  ecs_components.cpp  ecs_components.h  ecs_definitions.h  ecs_entity.cpp  ecs_entity.h  ecs_entity_test.cpp
kandinsky/experimental/: entity_reflection.cpp  entity_reflection.h
kandinsky/game/: BUILD.bazel  components.cpp  components.h  entity.cpp  entity.h  entity_definitions.h  entity_manager.cpp  entity_manager.h  entity_test.cpp  spawner.cpp  spawner.h  tower.cpp  tower.h
kandinsky/gameplay/: BUILD.bazel  building.cpp  building.h  enemy.cpp  enemy.h  gamemode.cpp  gamemode.h  health_component.cpp  health_component.h  player.cpp  player.h  projectile.cpp  projectile.h  spawner.cpp  spawner.h  terrain.cpp  terrain.h  ui.cpp  ui.h
kandinsky/graphics/: BUILD.bazel  font.cpp  font.h  light.cpp  light.h  model.cpp  model.h  opengl.cpp  opengl.h  render_state.cpp  render_state.h  shader.cpp  shader.h  texture.cpp  texture.h
kandinsky/systems/: BUILD.bazel  camera_system.cpp  camera_system.h  enemy_system.cpp  enemy_system.h  schedule.cpp  schedule.h  schedule_system.cpp  schedule_system.h  system.cpp  system.h  system_manager.cpp  system_manager.h
kandinsky/utils/: BUILD.bazel  arg_parser.cpp  arg_parser.h  arg_parser_test.cpp  defer.h
scenes/: test_scene.yaml  test_scene2.yaml
shaders/: shader.vs
testing/testdata/: BUILD.bazel
