load("//kandinsky:cc_rules.bzl", "kdk_cc_library")

kdk_cc_library(
    name = "core",
    hdrs = [
        "color.h",
        "container.h",
        "defines.h",
        "intrin.h",
        "math.h",
        "memory.h",
        "string.h",
    ],
    srcs = [
        "color.cpp",
        "defines.cpp",
        "math.cpp",
        "memory.cpp",
        "string.cpp",
    ],
    deps = [
        "//third_party:glm",
        "//third_party:stb",
        "//third_party:cwalk",
        "//third_party:sdl3",
    ],
    linkopts = ["-DEFAULTLIB:Dbghelp.lib"],
    visibility = [
        "//apps:__subpackages__",
        "//kandinsky:__subpackages__",
        "//experimental:__subpackages__",
    ],
)

GRAPHICS_HDRS = [
    "graphics/light.h",
    "graphics/model.h",
    "graphics/opengl.h",
    "graphics/render_state.h",
]

GRAPHICS_SRCS = [
    "graphics/light.cpp",
    "graphics/model.cpp",
    "graphics/opengl.cpp",
    "graphics/render_state.cpp",
]

kdk_cc_library(
    name = "kandinsky",
    hdrs = [
        "camera.h",
        "debug.h",
        "entity.h",
        "glew.h",
        "imgui.h",
        "imgui_widgets.h",
        "input.h",
        "platform.h",
        "serde.h",
        "time.h",
        "window.h",
    ] + GRAPHICS_HDRS,
    srcs = [
        "camera.cpp",
        "debug.cpp",
        "entity.cpp",
        "imgui_widgets.cpp",
        "glew.cpp",
        "platform.cpp",
        "serde.cpp",
        "time.cpp",
    ] + GRAPHICS_SRCS,
    deps = [
        ":core",
        "//kandinsky/utils",
        "//third_party:assimp",
        "//third_party:glew",
        "//third_party:imgui",
        "//third_party:imguizmo",
        "//third_party:sdl3",
        "//third_party:stb",
        "//third_party:yaml-cpp",
    ],
    linkopts = ["-DEFAULTLIB:opengl32.lib"],
    visibility = [
        "//apps:__subpackages__",
        "//kandinsky:__subpackages__",
    ],
)

cc_test(
    name = "tests",
    srcs = [
        "container_test.cpp",
        "entity_test.cpp",
        "memory_test.cpp",
        "serde_test.cpp",
        "string_test.cpp",
    ],
    testonly = True,
    size = "small",
    deps = [
        ":kandinsky",
        "//third_party:catch2",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "imgui.cpp",
        "main.cpp",
        "window.cpp",
    ],
    deps = [
        ":kandinsky",
        "//third_party:imgui_sdl3_opengl3",
    ],
)

filegroup(
    name = "app_harness",
    srcs = [
        "app_harness.cpp",
    ],
    visibility = [
        "//apps:__subpackages__",
    ],
)

filegroup(
    name = "all",
    srcs = [
        ":main",
        "//apps/learn_opengl:learn_opengl_shared",
    ],
)
