load("//kandinsky:cc_rules.bzl", "kdk_cc_library")

kdk_cc_library(
    name = "kandinsky",
    hdrs = [
        "camera.h",
        "debug.h",
        "entity.h",
        "glew.h",
        "imgui.h",
        "imgui_widgets.h",
        "input.h",
        "platform.h",
        "scene.h",
        "window.h",
        "//kandinsky/graphics:hdrs",
    ],
    srcs = [
        "camera.cpp",
        "debug.cpp",
        "entity.cpp",
        "imgui_widgets.cpp",
        "glew.cpp",
        "platform.cpp",
        "scene.cpp",
        "//kandinsky/graphics:srcs",
    ],
    deps = [
        "//kandinsky/core",
        "//kandinsky/utils",
        "//third_party:assimp",
        "//third_party:glew",
        "//third_party:imgui",
        "//third_party:imguizmo",
        "//third_party:nfd",
        "//third_party:sdl3",
        "//third_party:stb",
    ],
    linkopts = ["-DEFAULTLIB:opengl32.lib"],
    visibility = [
        "//apps:__subpackages__",
        "//kandinsky:__subpackages__",
    ],
)

cc_test(
    name = "tests",
    srcs = [
        "entity_test.cpp",
    ],
    testonly = True,
    size = "small",
    deps = [
        ":kandinsky",
        "//third_party:catch2",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "imgui.cpp",
        "main.cpp",
        "window.cpp",
    ],
    deps = [
        ":kandinsky",
        "//third_party:imgui_sdl3_opengl3",
    ],
)

filegroup(
    name = "app_harness",
    srcs = [
        "app_harness.cpp",
    ],
    visibility = [
        "//apps:__subpackages__",
    ],
)

filegroup(
    name = "all",
    srcs = [
        ":main",
        "//apps/learn_opengl:learn_opengl_shared",
    ],
)
