load("//kandinsky:cc_rules.bzl", "kdk_cc_library")

kdk_cc_library(
    name = "learn_opengl",
    hdrs = [
        "learn_opengl.h",
        "light.h",
    ],
    srcs = [
        "learn_opengl.cpp",
        "light.cpp",
    ],
    includes = [".."],
    deps = [
        "//kandinsky",
        "//third_party:imgui",
        "//third_party:glew",
    ],
    linkopts = ["-DEFAULTLIB:opengl32.lib"],
    visibility = ["//visibility:public"],
)

cc_shared_library(
    name = "learn_opengl_shared",
    deps = [
        ":learn_opengl",
    ],
    visibility = ["//visibility:public"],
)
