load("//kandinsky:cc_rules.bzl", "kdk_cc_library")

kdk_cc_library(
    name = "learn_opengl",
    hdrs = [
        "learn_opengl.h",
    ],
    srcs = [
        "learn_opengl.cpp",
        "//kandinsky:app_harness",
    ],
    includes = [".."],
    deps = [
        "//kandinsky",
        "//third_party:imgui",
        "//third_party:glew",
    ],
    visibility = ["//visibility:public"],
)

cc_shared_library(
    name = "learn_opengl_shared",
    deps = [
        ":learn_opengl",
    ],
    visibility = ["//visibility:public"],
)
