load("//kandinsky:cc_rules.bzl", "kdk_cc_library", "kdk_cc_test")

kdk_cc_library(
    name = "core",
    hdrs = [
        "algorithm.h",
        "color.h",
        "container.h",
        "defines.h",
        "file.h",
        "function.h",
        "intrin.h",
        "math.h",
        "memory.h",
        "string.h",
        "serde.h",
        "time.h",
    ],
    srcs = [
        "color.cpp",
        "defines.cpp",
        "file.cpp",
        "math.cpp",
        "memory.cpp",
        "string.cpp",
        "serde.cpp",
        "time.cpp",
    ],
    deps = [
        "//third_party:glm",
        "//third_party:stb",
        "//third_party:cwalk",
        "//third_party:sdl3",
        "//third_party:yaml-cpp",
    ],
    linkopts = ["-DEFAULTLIB:Dbghelp.lib"],
    visibility = [
        "//apps:__subpackages__",
        "//kandinsky:__subpackages__",
        "//experimental:__subpackages__",
    ],
)

kdk_cc_test(
    name = "tests",
    srcs = [
        "container_test.cpp",
        "file_test.cpp",
        "function_test.cpp",
        "memory_test.cpp",
        "serde_test.cpp",
        "string_test.cpp",
    ],
    testonly = True,
    size = "small",
    data = [
        "//testing/testdata:file_testdata",
    ],
    defines = ["KDK_IN_TEST=1"],
    deps = [
        ":core",
        "//third_party:catch2",
    ],
)
