load("//kandinsky:cc_rules.bzl", "kdk_cc_library")

kdk_cc_library(
    name = "game",
    hdrs = [
        "entity_definitions.h",
        "components.h",
        "entity.h",
    ],
    srcs = [
        "entity.cpp",
        "components.cpp",
    ],
    deps = [
        "//kandinsky:core",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
        "//apps:__subpackages__",
    ],
)

cc_test(
    name = "tests",
    srcs = [
        "entity_test.cpp",
    ],
    size = "small",
    deps = [
        ":game",
        "//third_party:catch2",
    ],
)
