filegroup(
    name = "hdrs",
    srcs = [
        "building.h",
        "enemy.h",
        "player.h",
        "projectile.h",
        "spawner.h",
        "health_component.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "building.cpp",
        "enemy.cpp",
        "player.cpp",
        "projectile.cpp",
        "spawner.cpp",
        "health_component.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
