filegroup(
    name = "hdrs",
    srcs = [
        "building.h",
        "enemy.h",
        "gamemode.h",
        "player.h",
        "projectile.h",
        "spawner.h",
        "terrain.h",
        "health_component.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "building.cpp",
        "enemy.cpp",
        "gamemode.cpp",
        "player.cpp",
        "projectile.cpp",
        "spawner.cpp",
        "terrain.cpp",
        "health_component.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
