filegroup(
    name = "hdrs",
    srcs = [
        "building.h",
        "enemy.h",
        "gamemode.h",
        "health_component.h",
        "player.h",
        "projectile.h",
        "spawner.h",
        "terrain.h",
        "ui.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "building.cpp",
        "enemy.cpp",
        "gamemode.cpp",
        "health_component.cpp",
        "player.cpp",
        "projectile.cpp",
        "spawner.cpp",
        "terrain.cpp",
        "ui.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
