load("//kandinsky:cc_rules.bzl", "kdk_cc_library")

filegroup(
    name = "hdrs",
    srcs = [
        "light.h",
        "model.h",
        "opengl.h",
        "render_state.h",
        "texture.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "light.cpp",
        "model.cpp",
        "opengl.cpp",
        "render_state.cpp",
        "texture.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
