filegroup(
    name = "hdrs",
    srcs = [
        "font.h",
        "light.h",
        "model.h",
        "opengl.h",
        "render_state.h",
        "shader.h",
        "texture.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "font.cpp",
        "light.cpp",
        "model.cpp",
        "opengl.cpp",
        "render_state.cpp",
        "shader.cpp",
        "texture.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
