filegroup(
    name = "hdrs",
    srcs = [
        "schedule.h",
        "system.h",
        "system_manager.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "schedule.cpp",
        "system.cpp",
        "system_manager.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
