filegroup(
    name = "hdrs",
    srcs = [
        "enemy_system.h",
        "schedule.h",
        "system.h",
        "system_manager.h",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "enemy_system.cpp",
        "schedule.cpp",
        "system.cpp",
        "system_manager.cpp",
    ],
    visibility = [
        "//kandinsky:__subpackages__",
    ],
)
