cc_library(
    name = "lib",
    hdrs = [
        "serde.h",
    ],
    srcs = [
        "serde.cpp",
    ],
    includes = ["../.."],
    deps = [
        "//kandinsky",
        "//third_party:yaml-cpp",
    ],
)

cc_binary(
    name = "serde",
    srcs = [
        "main.cpp"
    ],
    deps = [
        ":lib",
    ],
)
